<resources>
    <string name="app_name" translatable="false">vMix Tally</string>
    <string name="saved_host" translatable="false">lastVmixHost</string>
    <string name="saved_port" translatable="false">lastVmixPort</string>
    <string name="ok">OK</string>
    <string name="connectingToServer">Connecting …</string>
    <string name="tally_program">ON PROGRAM</string>
    <string name="tally_preview">ON PREVIEW</string>
    <string name="tally_none">STANDBY</string>

    <string name="youtube_how_to_url" translatable="false">https://youtu.be/s7P0CekCog8</string>
    <string name="settings_title">Settings</string>
    <string name="help_menu_item">Help</string>
    <string name="preference_file_key" translatable="false">vmix_tally_pref</string>
    <string name="connect_button_text">Connect</string>
    <string name="disconnect_button_text">Disconnect</string>
    <string name="tally_colour">Tally Colour</string>
    <string name="error_invalid_port">Invalid port number</string>
    <string name="error_invalid_address">Invalid address</string>
    <string name="connected">Connected</string>
    <string name="dialog_input_removed_title">Input removed</string>
    <string name="inputRemovedText">%1$s was removed</string>
    <string name="default_input_name">Input</string>
    <string name="reconnecting">Reconnecting …</string>
    <string name="Cancel">Cancel</string>
    <string name="port">Port</string>
    <string name="select_input">Select Input</string>
    <string name="show_tally">Show Tally</string>
    <string name="vmix_address">vMix Address</string>
    <string name="error_tcp_connection_failed">Could not connect. Check address is correct and port %1$s is open</string>
    <string name="error_host_connection">Could not connect. Check that port %1$d is open</string>
    <string name="error">error</string>
</resources>
