<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="uk.co.flakeynetworks.vmixtally.ui.settings.SettingsViewModel" />
        <variable
            name="controller"
            type="uk.co.flakeynetworks.vmixtally.ui.settings.SettingsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context="uk.co.flakeynetworks.vmixtally.TallyActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingStart="0dp"
                            android:paddingEnd="20dp">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/vmix_address"
                                android:textColor="@android:color/white" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:error="@{viewmodel.addressError}"
                                app:errorEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/foreground"
                                    android:ems="10"
                                    android:importantForAutofill="no"
                                    android:inputType="textPersonName"
                                    android:text="@={viewmodel.address}"
                                    android:textColor="@android:color/white"
                                    android:enabled="@{safeUnbox(viewmodel.addressEnabled)}"/>
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/port"
                                android:textColor="@color/foreground"
                                tools:text="Port" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:error="@{viewmodel.portError}"
                                app:errorEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/foreground"
                                    android:ems="10"
                                    android:importantForAutofill="no"
                                    android:inputType="numberSigned"
                                    android:text="@={`` + viewmodel.port}"
                                    android:textColor="@android:color/white"
                                    android:enabled="@{safeUnbox(viewmodel.portEnabled)}"/>
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <Button
                        android:id="@+id/connectButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.connectButtonText}"
                        android:onClickListener= "@{() -> controller.connectButtonClicked()}"
                        android:enabled="@{safeUnbox(viewmodel.connectButtonEnabled)}"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/connectingBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="@{safeUnbox(viewmodel.displayConnectingBox) ? View.VISIBLE : View.GONE }">

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@android:color/white"
                        android:paddingTop="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/connectingToServer"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/statusBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:visibility="@{safeUnbox(viewmodel.displayStatusBox)? View.VISIBLE : View.GONE}">

                    <TextView
                        android:id="@+id/statusText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@{viewmodel.statusText}"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white" />

                    <ImageView
                        android:id="@+id/tickImage"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/tick"
                        android:visibility="@{safeUnbox(viewmodel.displayTick) ? View.VISIBLE : View.GONE}"
                        android:contentDescription="@string/connected" />

                    <ImageView
                        android:id="@+id/crossImage"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/cross"
                        android:visibility="@{safeUnbox(viewmodel.displayCross) ? View.VISIBLE : View.GONE}"
                        android:contentDescription="@string/error" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/inputBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="@{safeUnbox(viewmodel.displayInputs) ? View.VISIBLE : View.GONE }">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_input"
                        android:textColor="@android:color/white" />

                    <Spinner
                        android:id="@+id/inputSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/spinner_background"
                        android:textColor="@color/foreground" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nextBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="@{safeUnbox(viewmodel.displayNextButton) ? View.VISIBLE : View.GONE }">

                    <Button
                        android:id="@+id/showTallyBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_tally" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>